k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-demo
  labels:
    app.kubernetes.io/part-of: assignment-1
