k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment-api-service
  namespace: k8s-demo
  labels:
    app: assignment-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: assignment-api
